Makefile: add blob_errors to installed headers
Add blob_errors.hpp to installed headers because code that uses this
library will need to know the exceptions produced by it.

Note: This was left out on accident.
Change-Id: Id5da55b2e3c967481ea24442ada7232e15c97c36
Signed-off-by: Patrick Venture <venture@google.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ libipmiblob_la_LIBADD = $(COMMON_LIBS)
 # Don't install the crc header.
 libipmiblob_la_SOURCES += ipmiblob/crc.cpp
 
+nobase_include_HEADERS += ipmiblob/blob_errors.hpp
 nobase_include_HEADERS += ipmiblob/blob_interface.hpp
 nobase_include_HEADERS += ipmiblob/blob_handler.hpp
 libipmiblob_la_SOURCES += ipmiblob/blob_handler.cpp
