--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,4 +19,5 @@ libipmiblob_la_SOURCES += ipmiblob/ipmi_handler.cpp
 nobase_include_HEADERS += ipmiblob/internal/sys.hpp
 libipmiblob_la_SOURCES += ipmiblob/internal/sys.cpp
 
+nobase_include_HEADERS += ipmiblob/test/blob_interface_mock.hpp
 nobase_include_HEADERS += ipmiblob/test/ipmi_interface_mock.hpp
