install crc header
Originally, the CRC implementation was internal this library, however
now it's going to be used by phosphor-ipmi-blobs.

Change-Id: I7d528de1e593f791468b2cc7477a6c16ede2c43a
Signed-off-by: Patrick Venture <venture@google.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ lib_LTLIBRARIES = libipmiblob.la
 libipmiblob_la_SOURCES =
 libipmiblob_la_LIBADD = $(COMMON_LIBS)
 
-# Don't install the crc header.
+nobase_include_HEADERS += ipmiblob/crc.hpp
 libipmiblob_la_SOURCES += ipmiblob/crc.cpp
 
 nobase_include_HEADERS += ipmiblob/blob_errors.hpp
