install crc_mock header
Install the crc_mock header for use in unit-tests in projects leveraging
this implementation of CRC.

Change-Id: Ia84caedb51e125ff3b051f93470990e44ff2540d
Signed-off-by: Patrick Venture <venture@google.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,4 +20,5 @@ nobase_include_HEADERS += ipmiblob/internal/sys.hpp
 libipmiblob_la_SOURCES += ipmiblob/internal/sys.cpp
 
 nobase_include_HEADERS += ipmiblob/test/blob_interface_mock.hpp
+nobase_include_HEADERS += ipmiblob/test/crc_mock.hpp
 nobase_include_HEADERS += ipmiblob/test/ipmi_interface_mock.hpp
