--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -10,13 +10,13 @@ check_PROGRAMS += tools_blob_unittest
 tools_blob_unittest_SOURCES = tools_blob_unittest.cpp
 tools_blob_unittest_CPPFLAGS = $(gtest_cppflags)
 tools_blob_unittest_LDADD = $(gtest_ldadd)
-tools_blob_unittest_LDADD += $(top_builddir)/src/ipmiblob/blob_handler.o
+tools_blob_unittest_LDADD += $(top_builddir)/src/libipmiblob.la
 
 check_PROGRAMS += tools_ipmi_unittest
 tools_ipmi_unittest_SOURCES = tools_ipmi_unittest.cpp
 tools_ipmi_unittest_CPPFLAGS = $(gtest_cppflags)
 tools_ipmi_unittest_LDADD = $(gtest_ldadd)
-tools_ipmi_unittest_LDADD += $(top_builddir)/src/ipmiblob/ipmi_handler.o
+tools_ipmi_unittest_LDADD += $(top_builddir)/src/libipmiblob.la
 
 check_PROGRAMS += tools_ipmi_error_unittest
 tools_ipmi_error_unittest_SOURCES = tools_ipmi_error_unittest.cpp
@@ -27,4 +27,4 @@ check_PROGRAMS += crc_unittest
 crc_unittest_SOURCES = crc_unittest.cpp
 crc_unittest_CPPFLAGS = $(gtest_cppflags)
 crc_unittest_LDADD = $(gtest_ldadd)
-crc_unittest_LDADD += $(top_builddir)/src/ipmiblob/crc.o
+crc_unittest_LDADD += $(top_builddir)/src/libipmiblob.la
