test: add mock build test
Avoid breaking downstream dependencies by building the mocks that are
exported.

Change-Id: If171910dcff4fdd90d88d7aa611891c9c3fc4b85
Signed-off-by: Patrick Venture <venture@google.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -28,3 +28,8 @@ crc_unittest_SOURCES = crc_unittest.cpp
 crc_unittest_CPPFLAGS = $(gtest_cppflags)
 crc_unittest_LDADD = $(gtest_ldadd)
 crc_unittest_LDADD += $(top_builddir)/src/libipmiblob.la
+
+check_PROGRAMS += mocks_unittest
+mocks_unittest_SOURCES = build_mocks.cpp
+mocks_unittest_CPPFLAGS = $(gtest_cppflags)
+mocks_unittest_LDADD = $(gtest_ldadd)
