splits sys interface into its own file
Signed-off-by: Patrick Venture <venture@google.com>
Change-Id: Ifa657dd6e5d73b6098597cd917e7da512af26641

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ nobase_include_HEADERS += ipmiblob/ipmi_handler.hpp
 libipmiblob_la_SOURCES += ipmiblob/ipmi_handler.cpp
 
 nobase_include_HEADERS += ipmiblob/internal/sys.hpp
+nobase_include_HEADERS += ipmiblob/internal/sys_interface.hpp
 libipmiblob_la_SOURCES += ipmiblob/internal/sys.cpp
 
 nobase_include_HEADERS += ipmiblob/test/blob_interface_mock.hpp
