Add support for ManagedFd
Cleanup existing usage of fd and replace it with ManagedFd instead.

Change-Id: Icb98e882bcb2248a8a31621263fdf7ddc5b341bf
Signed-off-by: Willy Tu <wltu@google.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,6 +29,7 @@ ipmiblob_lib = library(
   include_directories : ipmiblob_incs,
   implicit_include_directories: false,
   version: meson.project_version(),
+  dependencies: [dependency('stdplus')],
   install: true,
   install_dir: get_option('libdir')
 )
